API: Refactoring (wip) - Aufteilung der Swagger-UI